# rust-coding-challenges

./: Cargo.toml  README.md
.github/workflows/: rust.yml
challenges/branch-prediction/: Cargo.toml  README.md
challenges/branch-prediction/src/: main.rs
challenges/branch-prediction/tests/: test.rs
challenges/cache-prediction/: Cargo.toml  README.md
challenges/cache-prediction/src/: lib.rs  main.rs
challenges/cache-prediction/tests/: test.rs
challenges/foo/: Cargo.toml  README.md
challenges/foo/src/: lib.rs  main.rs
challenges/foo/tests/: test.rs
challenges/simple-cas/: Cargo.toml  README.md
challenges/simple-cas/src/: lib.rs  main.rs
challenges/simple-cas/tests/: test.rs
challenges/simple-parser/: Cargo.toml  README.md
challenges/simple-parser/input/: large.txt  small.txt
challenges/simple-parser/src/: lib.rs  main.rs
challenges/simple-parser/tests/: test.rs
challenges/wc-command/: Cargo.toml  README.md
challenges/wc-command/src/: lib.rs  main.rs
challenges/wc-command/tests/: test.rs
scripts/: create_challenge.sh
src/: utils.rs
