[package]
name = "simple-cas"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
rust-coding-challenges = { path = "../../" }
serde = { version = "1.0.219", features = ["derive"] }  
sha2 = "0.10.9"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["fs", "macros", "rt-multi-thread"] }
